# agent-mc-riding-weather

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ride-check.yml  tests.yml
src/ride_agent/: __main__.py  config.py  emailer.py  llm.py  main.py  models.py  rules.py  state.py  timeutil.py  tracing.py  traffic.py  weather.py
src/ride_agent/templates/: email.html.j2
state/: last_run.json
tests/: factories.py  test_rules.py  test_state_diff.py  test_target_day.py  test_timeutil.py  test_traffic_scoring.py  test_weather_windows.py
