[project]
name = "ride-agent"
version = "0.1.0"
description = "AI agent that recommends whether it's a good day to ride a motorcycle to work"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "openai>=1.40",
    "tzdata>=2024.1",
    "python-dotenv>=1.0",
    "langsmith>=0.1.100",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
